cert-manager/test-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: test-cert
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
